--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -387,3 +387,78 @@ h2, h3, h4, h5, h6, strong, .bold-text {
     margin: 10px 0;
   }
 }
+
+
+/*tab itinerary*/
+.badge {
+  background-color: #777;
+}
+
+.tabs-left { margin-top: 3rem; }
+
+.nav-tabs-vertical {
+  float: left;
+  border-bottom: 0;
+  min-height: 100px;
+
+
+  li {
+    float: none;
+    margin: 0;
+
+    a {
+      margin-right: 0;
+      border: 0;
+      background-color: #333;
+
+      &:hover {
+        background-color: #fff;
+        .glyphicon{
+          color: #333;
+
+        }
+      }
+    }
+  }
+
+  .glyphicon {
+    color: #fff;
+  }
+
+  .active a
+  {
+    background-color: #fff;
+    .glyphicon {
+      color: #333;
+    }
+  }
+}
+
+.nav-tabs-vertical>li.active>a, .nav-tabs-vertical>li.active>a:hover, .nav-tabs-vertical>li.active>a:focus {
+  border:0;
+}
+
+.tab-content {
+  margin-left: 45px;
+
+  .tab-pane {
+    display: none;
+    background-color: #fff;
+    padding: 1.6rem;
+    overflow-y: auto;
+  }
+
+  .active { display: block; }
+}
+
+.list-group {
+  width: 100%;
+
+  .list-group-item {
+    height: 50px;
+
+    h4, span {
+      line-height: 11px;
+    }
+  }
+}
