--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -5,21 +5,20 @@
     </div>
     <div class="info-right">
       <% if sign_in? %>
-
           <ul class="nav nav-pills top-after-login">
-
             <li role="presentation" class="dropdown">
               <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 <%= image_tag current_user.avatar, width: 30, class: "img-rounded" %>
-                <div class="username-right-top"><%= current_user.name %></div> <span class="caret"></span>
+                <div class="username-right-top"><%= current_user.name %></div>
+                <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
                 <li><a href="#" data-toggle="modal" data-target="#trip-form">New Trip</a></li>
                 <li><%= link_to 'Logout', sessions_path, method: :delete %></li>
                 <li><%= link_to 'Profile', edit_user_path(current_user_id), method: :get %></li>
+                <li><%= link_to 'Home', root_path %></li>
               </ul>
             </li>
-
           </ul>
       <% else %>
           <div class="top-before-login">
@@ -31,5 +30,5 @@
   </div>
   <%= render 'sessions/new' %>
   <%= render 'users/new' %>
-  <%= render 'trips/new_basic' %>
+  <%= render 'trips/new' %>
 </div>
