add missing tests

--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -1,5 +1,5 @@
 <div class="form-slide">
-  <%= form_for @trip, method: :put do |f| %>
+  <%= form_for @trip, method: :put do |_| %>
       <%= render 'share/model_error', object: @trip %>
       <h2 class="fs-title">Trip Basic Information</h2>
       <fieldset class="form-group">
