--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -414,9 +414,11 @@ h2, h3, h4, h5, h6, strong, .bold-text {
       margin-right: 0;
       border: 0;
       background-color: #333;
+      color: #fff;
 
       &:hover {
         background-color: #fff;
+        color: #333;
         .glyphicon{
           color: #333;
 
@@ -425,6 +427,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
     }
   }
 
+
   .glyphicon {
     color: #fff;
   }
@@ -432,6 +435,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   .active a
   {
     background-color: #fff;
+    color: #333;
     .glyphicon {
       color: #333;
     }
@@ -476,4 +480,44 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   .tt-suggestion{
     cursor: pointer;
   }
+}
+
+/*itinerary*/
+.itinerary-content{
+  margin-left: 0;
+  h1{
+    font-size: 40px;
+  }
+  .schedule{
+    padding: 10px 0 0 0;
+    min-height: 300px;
+    .form-group{
+      label{
+        text-align: left;
+      }
+    }
+  }
+  .schedule-content{
+    margin-left: 0;
+  }
+  .sortable {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .sortable li {
+    margin: 0 3px 3px 3px;
+    padding: 10px;
+    padding-left: 10px;
+    font-size: 18px;
+    .next_place{
+      padding: 10px;
+      border: 1px solid #bbb;
+      border-radius: 11px;
+    }
+  }
+  .itinerary-display{
+    background-color: #E7F4F2;
+  }
+
 }
