--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 <div class="container">
   <%= yield %>
 </div>
+<%= image_tag(asset_path("foot_travel.jpg"), class:"image-foot") %>
 
 </body>
 </html>
