--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -1,46 +1,55 @@
 <div class="form-slide">
   <%= form_for @trip, method: :put do |_| %>
       <%= render 'share/model_error', object: @trip %>
-      <h2 class="fs-title">Trip Basic Information</h2>
-      <fieldset class="form-group">
-        <label for="title">Title</label>
-        <input type="text" class="form-control" id="title" value="<%= @trip.title %>" placeholder="Enter title">
-      </fieldset>
+      <div>
+        <div class="col-md-4">
+          <%= image_tag(asset_path("travel_colorful.jpg"), width:"270") %>
+        </div>
+        <div class="col-md-8">
+          <h2 class="fs-title">Trip Basic Information</h2>
+          <fieldset class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="title" value="<%= @trip.title %>" placeholder="Enter title">
+          </fieldset>
 
-      <fieldset class="form-group">
-        <label for="description">Description</label>
+          <fieldset class="form-group">
+            <label for="description">Description</label>
       <textarea class="form-control" id="description" rows="3" name="trip[description]"
                 placeholder="Enter description"><%= @trip.description %></textarea>
-      </fieldset>
+          </fieldset>
 
-      <fieldset class="form-group">
-        <label for="expected_budget">Expected Budget</label>
-        <input type="number" class="form-control" id="expected_budget" min="0" value="<%= @trip.expected_budget %>"
-               placeholder="Enter expected budget" name="trip[expected_budget]">
-      </fieldset>
+          <fieldset class="form-group">
+            <label for="expected_budget">Expected Budget</label>
+            <input type="number" class="form-control" id="expected_budget" min="0" value="<%= @trip.expected_budget %>"
+                   placeholder="Enter expected budget" name="trip[expected_budget]">
+          </fieldset>
 
-      <fieldset class="form-group">
-        <label>Participants</label>
-        <ul id="participantTags">
-        </ul>
-        <%= hidden_field_tag 'participant' %>
-      </fieldset>
+          <fieldset class="form-group">
+            <label>Participants</label>
+            <ul id="participantTags">
+            </ul>
+            <%= hidden_field_tag 'participant' %>
+          </fieldset>
 
-      <fieldset class="form-group">
-        <label>Starting Information</label>
-        <div class="col-md-12">
-          <div class="col-md-6" id="trip-departure-id">
-            <input class="typeahead form-control" type="text" value="<%= @trip.departure.try(:name) %>"
-                   name="trip[departure]" placeholder="Departure" id="departure">
-          </div>
+          <fieldset class="form-group">
+            <label>Starting Information</label>
+            <div class="col-md-12">
+              <div class="col-md-6" id="trip-departure-id">
+                <input class="typeahead form-control" type="text" value="<%= @trip.departure.try(:name) %>"
+                       name="trip[departure]" placeholder="Departure" id="departure">
+              </div>
 
-          <div class="col-md-6">
-            <input title="Start Date" type="text" class="form-control datetimepicker"
-                   value="<%= @trip.start_date.try(:strftime, '%d-%m-%Y') %>"
-                   name="trip[start_date]" id="start-date" placeholder="Enter Start Date"/>
-          </div>
+              <div class="col-md-6">
+                <input title="Start Date" type="text" class="form-control datetimepicker"
+                       value="<%= @trip.start_date.try(:strftime, '%d-%m-%Y') %>"
+                       name="trip[start_date]" id="start-date" placeholder="Enter Start Date"/>
+              </div>
+            </div>
+          </fieldset>
         </div>
-      </fieldset>
+      </div>
+
+
 
       <input type="submit" name="save" class="btn btn-primary" value="Save"/>
       <input type="button" name="next" class="next action-button" value="Next"/>
