--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -323,7 +323,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
 }
 /*headings*/
 .fs-title {
-  font-size: 15px;
+  font-size: 35px;
   text-transform: uppercase;
   color: #2C3E50;
   margin-bottom: 10px;
@@ -404,7 +404,7 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   float: left;
   border-bottom: 0;
   min-height: 100px;
-
+  width: 90px;
 
   li {
     float: none;
